# device_soc_goodix

./: BUILD.gn  OAT.xml  README.en.md  README.md
goodix/gr551x/: bin_create.py  sdk_main.c
goodix/gr551x/Core/Inc/: custom_config.h  hi_watchdog.h  log_serial.h  main.h  user_app.h
goodix/gr551x/GR551x_SDK/components/drivers_ext/gh30x/: gh30x_ctrl.h  gh30x_driver.h  gh30x_spi_api.c
goodix/gr551x/GR551x_SDK/components/drivers_ext/gh30x/lib/: cortexM4l_hbd_ctrl.lib
goodix/gr551x/GR551x_SDK/components/drivers_ext/paw3205db/: paw3205db.c  paw3205db.h
goodix/gr551x/GR551x_SDK/components/drivers_ext/ssd1316/: ssd1316.h  ssd1316_config.c  ssd1316_config.h
goodix/gr551x/GR551x_SDK/components/drivers_ext/uc1701x/: uc1701.c  uc1701_config.h  uc1701x.c
goodix/gr551x/GR551x_SDK/components/libraries/hci_uart_test/: hci_uart.c  hci_uart.h
goodix/gr551x/GR551x_SDK/components/libraries/log/: dbg_printf.c
goodix/gr551x/GR551x_SDK/components/patch/ind/: patch.h  patch_tab.h
goodix/gr551x/GR551x_SDK/components/sdk/: ble_gapm.h
goodix/gr551x/GR551x_SDK/toolchain/gr551x/source/: interrupt_gr55xx.c  platform_gr55xx.c
goodix/gr551x/adapter/hals/bluetooth/: hal_bt_evt_handler.h  hal_bt_gatt.c  hal_bt_gatt_server.c
goodix/gr551x/adapter/hals/iot_hardware/wifiiot_lite/: BUILD.gn  hal_iot_flash.c  hal_iot_gpio.c  hal_iot_i2c.c  hal_iot_uart.c  hal_reset.c
goodix/gr551x/adapter/hals/utils/file/src/: app_lfs.c  posix_fs.c
goodix/gr551x/ohosdemo/: BUILD.gn
goodix/gr551x/ohosdemo/hello_demo/src/: main.c
gr551x/: BUILD.gn  Kconfig.liteos_m.soc  gr551x.ld  target_config.h
gr551x/Core/Src/: log_serial.c  main.c  syscalls.c  user_app.c  user_periph_setup.c
gr551x/Core/Startup/: startup_gr55xx.s
gr551x/GR551x_SDK/components/drivers_ext/gh30x/: gh30x_i2c_api.c
gr551x/GR551x_SDK/components/drivers_ext/ssd1316/: ssd1316.c  ssd1316_i2c_soft.c  ssd1316_i2c_soft.h
gr551x/GR551x_SDK/components/drivers_ext/uc1701x/: uc1701.h  uc1701_config.c
gr551x/GR551x_SDK/components/libraries/bsp/: bsp.c
gr551x/GR551x_SDK/components/sdk/: gr55xx_sys.h
gr551x/adapter/hals/bluetooth/: BUILD.gn  hal_bt_evt_handler.c  hal_bt_evt_handler.h  hal_bt_gatt.c  hal_bt_gatt_server.c  hal_bt_ota.c
gr551x/adapter/hals/iot_hardware/wifiiot_lite/: BUILD.gn  hal_iot_flash.c  hal_iot_gpio.c  hal_iot_pwm.c  hal_iot_watchdog.c  hal_lowpower.c
gr551x/adapter/hals/update/: BUILD.gn  hal_hota_board.c
gr551x/adapter/hals/utils/file/: BUILD.gn
gr551x/adapter/hals/utils/file/inc/: app_lfs.h
gr551x/adapter/hals/utils/file/src/: hal_file.c  posix_fs.c
gr551x/components/fs/: BUILD.gn  fs_init.c  littlefs.c  littlefs.h
gr551x/components/watchdog/: BUILD.gn  hi_watchdog.h
gr551x/drivers/: BUILD.gn  drivers.gni
gr551x/drivers/gpio/: BUILD.gn  gpio_gr55xx.c  gpio_gr55xx.h
gr551x/drivers/uart/: BUILD.gn  uart_gr55xx.c  uart_gr55xx.h
gr551x/hcs/: BUILD.gn  hdf.hcs
gr551x/hcs/fs/: fs_config.hcs
gr551x/liteos_m/: config.gni
gr551x/ohosdemo/hello_demo/: BUILD.gn
gr551x/sdk_liteos/: BUILD.gn  config.gni
gr551x/sdk_liteos/config/: flash_scatter_config.h
gr551x/sdk_liteos/gr551x_sdk/: BUILD.gn
gr551x/sdk_liteos/gr551x_sdk/components/drivers_ext/gr551x/: gr551x_spi_flash.c  gr551x_spi_flash.h
gr551x/sdk_liteos/gr551x_sdk/components/libraries/app_lfs/: app_lfs.c  app_lfs.h
gr551x/sdk_liteos/gr551x_sdk/components/libraries/app_log/: app_log.h
gr551x/sdk_liteos/gr551x_sdk/toolchain/gr551x/source/: interrupt_gr55xx.c  system_gr55xx.c
gr551x/sdk_liteos/liteos_m/: target_config.h
gr551x/sdk_liteos/platform/: BUILD.gn
gr551x/sdk_liteos/platform/include/: main.h
gr551x/sdk_liteos/platform/log/: BUILD.gn  log_serial.c
gr551x/sdk_liteos/platform/main/: BUILD.gn  main.c  sdk_main.c
gr551x/sdk_liteos/platform/startup/: BUILD.gn  gr551x.ld  startup_gr55xx.s
gr551x/sdk_liteos/platform/system/: BUILD.gn  dprintf.c  log_serial.c  system.c
gr551x/tools/: bin_create.py
tools/: after_build.bat  custom_config.h
