# Copyright (c) 2021 HiSilicon (Shanghai) Technologies CO., LIMITED.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# Kernel type, e.g. "linux", "liteos_a", "liteos_m".
kernel_type = "liteos_m"
ohos_kernel_type = "liteos_m"
# Kernel version.
kernel_version = ""
# Board CPU type, e.g. "cortex-a7", "riscv32".
board_cpu = "cortex-m4"
# Board arch, e.g.  "armv7-a", "rv32imac".
board_arch = ""
# Toolchain name used for system compiling.
# E.g. gcc-arm-none-eabi, arm-linux-harmonyeabi-gcc, ohos-clang,  riscv32-unknown-elf.
# Note: The default toolchain is "ohos-clang". It's not mandatory if you use the default toochain.
board_toolchain = "arm-none-eabi"
# The toolchain path instatlled, it's not mandatory if you have added toolchian path to your ~/.bashrc.
board_toolchain_path = ""
# Compiler prefix.
board_toolchain_prefix = "arm-none-eabi-"
# Compiler type, "gcc" or "clang".
board_toolchain_type = "gcc"
# Board related common compile flags.
board_cflags = [ 
    "-std=gnu99",
    "--inline",
   "-ggdb", 
    "-O0",
    "-ffunction-sections",
    "-fdata-sections",
    "-mfloat-abi=softfp",
    "-mfpu=fpv4-sp-d16",
    "-mapcs-frame",
    "-mcpu=cortex-m4",
    "-mthumb",
    "-mthumb-interwork",
    "-gdwarf-2",
    "-MD",
    "-fno-stack-protector",
    "-D__NEED_off_t",    
    "-DAPP_LFS_BLOCK_COUNT=60",
    "-Dbool=int"
     ]
board_cxx_flags = [  ]
board_ld_flags = [
    "-std=gnu99",
    "--inline",
   "-ggdb", 
    "-O0", 
    "-ffunction-sections",
    "-fdata-sections",
    "-mfloat-abi=softfp",
    "-mfpu=fpv4-sp-d16",
    "-mapcs-frame",
    "-mcpu=cortex-m4",
    "-mthumb",
    "-mthumb-interwork",
    "-gdwarf-2",
    "-MD",
    "-fno-stack-protector",
    "-Wl,--gc-sections", 
    "-Wl,--start-group",
    "-Llibs",
    "-lc", 
    "-lm",
    "-lsec",
    "-Wl,--whole-archive",

    "-larch",
    "-lbootstrap",
    "-lexchook",
    "-lhctest",
    "-lkal",
    "-lsamgr",
    "-lsysparam",
    "-lsamgr_adapter",
    "-ltoken_static",
    "-lbroadcast",
    "-lhal_file_static",
    "-lhilog_lite",
    "-lhiview_lite",
    "-lkernel",
    "-lnative_file",
    "-lsamgr_source",
    "-lutils",
    "-lcmsis",
    "-lhal_sysparam",
    "-lhilog_lite_command",
    "-lposix",
    "-lbacktrace",
    "-lcpup",
    "-lhal_token_static",
    "-lhal_iothardware",
    "-lutils_kv_store",
    "-lapp_hello",

    # "-lmodule_ActsBootstrapTest",
    # "-lmodule_ActsWifiIotTest",
    # "-lmodule_ActsCMSISTest",
    # "-lmodule_ActsParameterTest",
    # "-lmodule_ActsSamgrTest",    
    # "-lmodule_ActsUtilsFileTest",
    # "-lmodule_ActsKvStoreTest",

    "-lble_sdk",
    "-Wl,--no-whole-archive",
    "-Wl,--end-group",
    "-Tbin/link.ld",
    "-Trom_symbol_gcc.txt",
    "-Wl,-Map=bin/application.map",
]

# Board related headfiles search path.
board_include_dirs = [
    "//kernel/liteos_m/kernel/arch/arm/cortex-m4/gcc/",
    "//kernel/liteos_m/kernel/arch/include/",
    "//kernel/liteos_m/utils/",
    "//kernel/liteos_m/kal/cmsis/",
    "//utils/native/lite/kal/timer/",
    "//utils/native/lite/include/",
    "//third_party/bounds_checking_function/include",
    "//kernel/liteos_m/kernel/include/",
    "//kernel/liteos_m/kal/posix/include/",
    "//kernel/liteos_m/components/exchook/",
    "//third_party/openssl",
    "//third_party/openssl/include",
    "//third_party/openssl/crypto/include",
    "//third_party/openssl/crypto/ec",
    "//device/goodix/gr551x",
    "//device/goodix/gr551x/Core/Inc",
    "//device/goodix/gr551x/vendor/hilink/include",
    "//device/goodix/gr551x/adapter/hals/bluetooth",

    "//device/goodix/gr551x/GR551x_SDK/components/app_drivers/inc",
    "//device/goodix/gr551x/GR551x_SDK/components/boards",
    "//device/goodix/gr551x/GR551x_SDK/components/drivers_ext/gr551x",
    "//device/goodix/gr551x/GR551x_SDK/components/drivers_ext/st7735",
    "//device/goodix/gr551x/GR551x_SDK/components/drivers_ext/vs1005",
    "//device/goodix/gr551x/GR551x_SDK/components/libraries/app_alarm",
    "//device/goodix/gr551x/GR551x_SDK/components/libraries/app_assert",
    "//device/goodix/gr551x/GR551x_SDK/components/libraries/app_error",
    "//device/goodix/gr551x/GR551x_SDK/components/libraries/app_key",
    "//device/goodix/gr551x/GR551x_SDK/components/libraries/app_log",
    "//device/goodix/gr551x/GR551x_SDK/components/libraries/app_queue",
    "//device/goodix/gr551x/GR551x_SDK/components/libraries/app_timer",
    "//device/goodix/gr551x/GR551x_SDK/components/libraries/at_cmd",
    "//device/goodix/gr551x/GR551x_SDK/components/libraries/bsp",
    "//device/goodix/gr551x/GR551x_SDK/components/libraries/dfu_master",
    "//device/goodix/gr551x/GR551x_SDK/components/libraries/dfu_port",
    "//device/goodix/gr551x/GR551x_SDK/components/libraries/gui",
    "//device/goodix/gr551x/GR551x_SDK/components/libraries/gui/gui_config",
    "//device/goodix/gr551x/GR551x_SDK/components/libraries/hal_flash",
    "//device/goodix/gr551x/GR551x_SDK/components/libraries/hci_uart",
    "//device/goodix/gr551x/GR551x_SDK/components/libraries/pmu_calibration",
    "//device/goodix/gr551x/GR551x_SDK/components/libraries/ring_buffer",
    "//device/goodix/gr551x/GR551x_SDK/components/libraries/sensorsim",
    "//device/goodix/gr551x/GR551x_SDK/components/libraries/utility",
    "//device/goodix/gr551x/GR551x_SDK/components/patch/ind",
    "//device/goodix/gr551x/GR551x_SDK/components/sdk/",
    "//device/goodix/gr551x/GR551x_SDK/drivers/inc",
    "//device/goodix/gr551x/GR551x_SDK/toolchain/cmsis/include",
    "//device/goodix/gr551x/GR551x_SDK/toolchain/gr551x/include",
]


board_include_dirs += []
# Board adapter dir for OHOS components.
board_adapter_dir = ""
# Sysroot path.
board_configed_sysroot = ""
# Board storage type, it used for file system generation.
storage_type = ""
#ohos_build_type = "release"


