import("//device/goodix/gr551x/liteos_m/config.gni")

static_library("app_hello") {
   configs = []

   sources = [
      "src/main.c",
   ]

   cflags = board_cflags

   include_dirs = board_include_dirs
   include_dirs += [
      "//kernel/liteos_m/kernel/arch/include",
      "//base/iot_hardware/peripheral/interfaces/kits",
      "//utils/native/lite/hals/file",
   ]
}

